--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-typescript": "^2.8.1",
     "merge2": "^0.3.6"
+  },
+  "dependencies": {
+    "gulp": "^3.9.0"
   }
 }
